apps/clubs/byzantium/website/prod/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: byzantium-website
spec:
  virtualhost:
    fqdn: blockchain.etsmtl.club
    tls:
      secretName: byzantium-website-tls
      minimumProtocolVersion: "1.3"
  routes:
    - conditions:
        - prefix: /
      enableWebsockets: true
      services:
        - name: byzantium-website-svc
          port: 80
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: byzantium-website-ets
spec:
  virtualhost:
    fqdn: blockchain.etsmtl.ca
    tls:
      secretName: byzantium-website-ets-tls
      minimumProtocolVersion: "1.3"
  routes:
    - conditions:
        - prefix: /
      enableWebsockets: true
      services:
        - name: byzantium-website-svc
          port: 80
